EVA-208 refactor: Se muestra user name en la tabla de la vista. Se cambia el nombre completo de la persona que crea el consecutivo por el user name (usuario que hace el login).

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -77,7 +77,7 @@
                                                                     {{ consecutivo.fecha_final | date:'Y-m-d'}}
                                                                 {% else %} N/A {% endif %}</td>
                                                             <td>{{ consecutivo.tipo_contrato }}</td>
-                                                            <td>{{ consecutivo.usuario_crea.get_full_name }}</td>
+                                                            <td>{{ consecutivo.usuario_crea.username }}</td>
                                                             <td>{% if consecutivo.justificacion %}{{ consecutivo.justificacion }}{% endif %}</td>
                                                             <td>
                                                                 {% if consecutivo.estado %}
