EVA-210 feat: Creación carpetas, vistas y templates bases del modulo de Gestión Actividades

--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -101,6 +101,20 @@
                             </a>
                         </li>
                         {% endif %}
+                        {% if perms.TalentoHumano.can_menu_gestionactividades %}
+                        <li>
+                            <a href="{% url 'GestionActividades:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-calendar-check icon-stack-1x opacity-100 color-info-700"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Gestión<br>Actividades
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
                     {% else %}
                         <li>
                             <a href="{% url 'Administracion:proveedor-index' %}" class="app-list-item text-white border-0 m-0">
