--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -77,7 +77,7 @@
                                                         </td>
                                                         <td>{{ consecutivo.detalle}}</td>
                                                         <td>{{ consecutivo.destinatario }}</td>
-                                                        <td>{{ consecutivo.usuario.get_full_name }}</td>
+                                                        <td>{{ consecutivo.usuario.username }}</td>
                                                         <td>{% if consecutivo.justificacion %}{{ consecutivo.justificacion }}{% endif %}</td>
                                                         <td>
                                                             {% if consecutivo.estado %}
